Update tutorial notebook with examples using OOP

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -383,8 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "pz_server.download_product(6, save_in=\".\")"
+    "pz_server.download_product(14, save_in=\".\")"
    ]
   },
   {
@@ -409,16 +408,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "dataframe = pz_server.get_product(6)\n",
-    "dataframe"
+    "catalog = pz_server.get_product(14)\n",
+    "catalog"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The default format for `get_product()` output is a Pandas DataFrame object (`fmt=\"pandas\"`). It is also possible to retrieve the table as an Astropy Table by passung the argument `fmt=\"astropy\"`.    "
+    "By default, the method `get_product` returns an object from a particular class, depending on the product's type. The classes `SpeczCatalog` and `TrainingSet` are basically childs of `pandas.DataFrame` with a couple of additional attributes and methods, such as the attribute `metadata`,  "
    ]
   },
   {
@@ -427,9 +425,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "dataframe = pz_server.get_product(6, fmt=\"astropy\")\n",
+    "catalog.metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and the method `display_metadata()`,  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.display_metadata()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "while preserves the useful methods from `pandas.DataFrame`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = catalog.Z.hist()\n",
+    "ax.set_xlabel(\"redshift\")\n",
+    "ax.set_ylabel(\"counts\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the [next section](prod-types) you will see more details about these specific classes. For those who prefer working with `astropy.Table` or pure `pandas.DataFrame`, the method `get_product()` gives the flexibility to choose the output format (`fmt=\"pandas\"` or `fmt=\"astropy\"`).     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe = pz_server.get_product(14, fmt=\"pandas\")\n",
+    "print(type(dataframe))\n",
     "dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = pz_server.get_product(14, fmt=\"astropy\")\n",
+    "print(type(table))\n",
+    "table"
    ]
   },
   {
@@ -453,7 +521,31 @@
     "\n",
     "https://pz-server-dev.linea.org.br/product/6_simple_training_set\n",
     "\n",
-    "<font color=red> WARNING:</font> The URL works only with the internal name, **not** with the **id** number. "
+    "<font color=red> WARNING:</font> The URL works only with the internal name, **not** with the **id** number. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "Clean up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del search_results, catalog, dataframe, table "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- "
    ]
   },
   {
@@ -465,8 +557,25 @@
     "\n",
     "# Product types \n",
     "\n",
-    "<font color=red> WARNING: SECTION UNDER CONSTRUCTION</font> \n",
-    "\n",
+    "<font color=red> WARNING: SECTION UNDER CONSTRUCTION</font> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pz_server import PzServer \n",
+    "from pz_server import Catalog, SpeczCatalog, TrainingSet\n",
+    "%reload_ext autoreload \n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The PZ Server API provides Python classes with useful methods to handle particular product types. Let's recap the product types available:   "
    ]
   },
@@ -496,7 +605,8 @@
     "tags": []
    },
    "source": [
-    "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources and should be provided as a single file with tabular data to PZ Server's the upload tool. \n",
+    "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources. To be considered as a single Spec-z Catalog, the data should be provided as a single file to PZ Server's the upload tool. For multi-survey catalogs, it is recommended to add the survey name or identification as an extra column. \n",
+    "\n",
     "\n",
     "Mandatory columns: \n",
     "* Right ascension [degrees] - `float`\n",
@@ -506,12 +616,21 @@
     "Recommended columns: \n",
     "* Spectroscopic redshift error - `float`\n",
     "* Quality flag - `integer`, `float`, or `string`\n",
-    "* Survey name (recommended for compilations of data from different surveys)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### List Spec-z Catalogs available on PZ Server"
+    "* Survey name (recommended for compilations of data from different surveys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gama = pz_server.get_product(14)"
    ]
   },
   {
@@ -520,55 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.display_products_list(filters={\"product_type\": \"Spec-z Catalog\"})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Display metadata of a given Spec-z Catalog "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Retrieve a given Spec-z Catalog - UNDER CONSTRUCTION\n",
-    "\n",
-    "The method `get_product()` returns the data stored under a given product **id** number or **internal_name** as an Astropy Table object (valid only for tabular data (e.g.: product types Spec-z Catalog and Training Set).   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#specz_catalog = pz_server.get_product(<product id number or name>)\n",
-    "#specz_catalog = pz_server.get_product(6)\n",
-    "#specz_catalog # .to_pandas()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For simple tabular data (product types: **Spec-z Catalog** and **Training Set**), the method returns an object of a class corresponding to the product type (classes: SpeczCatalog or TrainingSet), which are simple extensions of the class _pandas.DataFrame_ with some particular attributes and methods). Let's see an axample with a Spec-z Catalog:\n",
-    "\n",
-    "import pandas as pd\n",
-    "pd.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#specz_catalog.product_id"
+    "gama.display_metadata()"
    ]
   },
   {
@@ -600,25 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#specz_catalog.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#specz_catalog.product_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#specz_catalog.attrs[\"prod_type\"]"
+    "gama.plot(ra_name=\"RA\", dec_name=\"DEC\", redshift_name=\"Z\")"
    ]
   },
   {
@@ -653,56 +706,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### List Training Sets available on PZ Server"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pz_server.display_products_list(filters={\"product_type\": \"Training Set\"})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Display metadata of a given Training Set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#metadata_train_set = pz_server.get_product_metadata(9)\n",
-    "#pz_server.display_product_metadata(\"14_goldenspike_train\") "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Retrieve a given Training Set "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#train_set = pz_server.get_product(9)\n",
-    "#train_set"
+    "train = pz_server.get_product(9)"
    ]
   },
   {
@@ -718,7 +729,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train_set.describe()"
+    "#train.describe()"
    ]
   },
   {
@@ -734,7 +745,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train_set.plot(mag_name=\"mag_i\", redshift_name=\"z_true\")"
+    "train.plot(mag_name=\"mag_i_lsst\", redshift_name=\"redshift\")"
    ]
   },
   {
