--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src = \"images/linea.png\" width=100 style=\"padding: 30px\"> \n",
+    "<img align=\"left\" src = \"images/linea.png\" width=120 style=\"padding: 20px\"> \n",
     "<img align=\"left\" src = \"images/rubin.png\" width=180 style=\"padding: 20px\"> \n",
     "\n",
     "# Photo-z Server - Tutorial Notebook\n",
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
     "\n",
-    "Last verified run: 2023-02-27 <br>"
+    "Last verified run: 2023-Apr-10 <br>"
    ]
   },
   {
@@ -30,8 +30,8 @@
     "    - [How to get general info from PZ Server](#general)\n",
     "    - [How to display the metadata of a data product](#metadata)\n",
     "    - [How to download data products as .zip files](#download-zip)  \n",
-    "    - [How to retrieve contents of data products (work on memory)](#retrieve-contents)\n",
     "    - [How to share data products with other RSP users](#share)\n",
+    "    - [How to retrieve contents of data products (work on memory)](#retrieve-contents)\n",
     "- Product types \n",
     "    - [Spec-z Catalogs](#spec)\n",
     "    - [Training Sets](#train)\n",
@@ -144,6 +144,7 @@
    "outputs": [],
    "source": [
     "from pz_server import PzServer \n",
+    "import matplotlib.pyplot as plt\n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
    ]
@@ -390,120 +391,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"retrieve-contents\"></a>\n",
-    "## How to retrieve contents of data products (work on memory)\n",
-    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div>     "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Another feature of the PZ Server API is to retrieve the contents of a given data product and atribute it to a variable in Python code. This feature is available only for tabular data (product types: **Spec-z Catalog** and **Training Set**). Let's see an example with the same data product as shown above.      "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "catalog = pz_server.get_product(14)\n",
-    "catalog"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By default, the method `get_product` returns an object from a particular class, depending on the product's type. The classes `SpeczCatalog` and `TrainingSet` are basically childs of `pandas.DataFrame` with a couple of additional attributes and methods, such as the attribute `metadata`,  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "catalog.metadata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and the method `display_metadata()`,  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "catalog.display_metadata()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "while preserves the useful methods from `pandas.DataFrame`. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "catalog.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax = catalog.Z.hist()\n",
-    "ax.set_xlabel(\"redshift\")\n",
-    "ax.set_ylabel(\"counts\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the [next section](prod-types) you will see more details about these specific classes. For those who prefer working with `astropy.Table` or pure `pandas.DataFrame`, the method `get_product()` gives the flexibility to choose the output format (`fmt=\"pandas\"` or `fmt=\"astropy\"`).     "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataframe = pz_server.get_product(14, fmt=\"pandas\")\n",
-    "print(type(dataframe))\n",
-    "dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table = pz_server.get_product(14, fmt=\"astropy\")\n",
-    "print(type(table))\n",
-    "table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a class=\"anchor\" id=\"share\"></a>\n",
     "## How to share data products with other RSP users\n",
     "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div>  \n",
@@ -522,6 +409,122 @@
     "https://pz-server-dev.linea.org.br/product/6_simple_training_set\n",
     "\n",
     "<font color=red> WARNING:</font> The URL works only with the internal name, **not** with the **id** number. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"retrieve-contents\"></a>\n",
+    "## How to retrieve contents of data products (work on memory)\n",
+    "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div>     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another feature of the PZ Server API is to let users retrieve the contents of a given data product to work on memory (by atributing the results of the method `get_product()` to a variable in the code). This feature is available only for tabular data (product types: **Spec-z Catalog** and **Training Set**). \n",
+    "\n",
+    "By default, the method `get_product` returns an object from a particular class, depending on the product's type. The classes `SpeczCatalog` and `TrainingSet` are simple extensions of `pandas.DataFrame` (via class composition) with a couple of additional attributes and methods, such as the attribute `metadata`, and the method `display_metadata()`. Let's see an example: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog = pz_server.get_product(8)\n",
+    "catalog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.display_metadata()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tabular data is alocated in the attribute `data`, which is a `pandas.DataFrame`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(catalog.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It preserves the useful methods from `pandas.DataFrame`, such as:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.data.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the [next section](prod-types) you will see more details about these specific classes. For those who prefer working with `astropy.Table` or pure `pandas.DataFrame`, the method `get_product()` gives the flexibility to choose the output format (`fmt=\"pandas\"` or `fmt=\"astropy\"`).     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe = pz_server.get_product(8, fmt=\"pandas\")\n",
+    "print(type(dataframe))\n",
+    "dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = pz_server.get_product(8, fmt=\"astropy\")\n",
+    "print(type(table))\n",
+    "table"
    ]
   },
   {
@@ -555,21 +558,7 @@
     "<div style=\"text-align: right\"> <a href=\"#contents\">back to the top</a> </div> \n",
     "<a class=\"anchor\" id=\"prod-types\"></a>\n",
     "\n",
-    "# Product types \n",
-    "\n",
-    "<font color=red> WARNING: SECTION UNDER CONSTRUCTION</font> "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pz_server import PzServer \n",
-    "from pz_server import Catalog, SpeczCatalog, TrainingSet\n",
-    "%reload_ext autoreload \n",
-    "%autoreload 2"
+    "# Product types \n"
    ]
   },
   {
@@ -616,13 +605,15 @@
     "Recommended columns: \n",
     "* Spectroscopic redshift error - `float`\n",
     "* Quality flag - `integer`, `float`, or `string`\n",
-    "* Survey name (recommended for compilations of data from different surveys)"
+    "* Survey name (recommended for compilations of data from different surveys)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Let's see an example of Spec-z Catalog: "
+   ]
   },
   {
    "cell_type": "code",
@@ -655,7 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#specz_catalog.describe()"
+    "gama.data.describe()"
    ]
   },
   {
@@ -671,7 +662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gama.plot(ra_name=\"RA\", dec_name=\"DEC\", redshift_name=\"Z\")"
+    "gama.plot(ra_name=\"RA\", dec_name=\"DEC\", redshift_name=\"Z\") #TBD: retrieve column names internaly "
    ]
   },
   {
@@ -713,7 +704,18 @@
    },
    "outputs": [],
    "source": [
-    "train = pz_server.get_product(9)"
+    "train_goldenspike = pz_server.get_product(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "train_goldenspike.display_metadata()"
    ]
   },
   {
@@ -729,14 +731,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train.describe()"
+    "train_goldenspike.data.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the methods `train_set_plots` for a quick visualization of training sets properties: "
+    "Quick visualization of training set properties: "
    ]
   },
   {
@@ -745,7 +747,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.plot(mag_name=\"mag_i_lsst\", redshift_name=\"redshift\")"
+    "train_goldenspike.plot(mag_name=\"mag_i_lsst\", redshift_name=\"redshift\")"
    ]
   },
   {
@@ -767,7 +769,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pz_server.display_products_list(filters={\"product_type\": \"Validation Results\"})"
+    "pz_server.display_products_list(filters={\"product_type\": \"Validation Results\"})"
    ]
   },
   {
@@ -783,7 +785,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pz_server.display_product_metadata(\"21_pz_validation_goldenspike_fzboost\")"
+    "pz_server.display_product_metadata(\"11_goldenspike_flexzboost\")"
    ]
   },
   {
@@ -801,16 +803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pz_server.get_product(21)#, save_in=\".\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pz_server.download_product(21, save_in=\".\")"
+    "pz_server.download_product(11, save_in=\".\")"
    ]
   },
   {
@@ -826,7 +819,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Photo-z Tables are the results of photo-z estimation on photometrics samples. The size limit for uploading files on the PZ Server is 200MB, therefore it does not support large Photo-z Tables such as the photo-zs of the LSST Objects catalog. Instead, the PZ Server can host only Photo-z Tables of small data sets. "
+    "The Photo-z Tables are the results of photo-z estimation on photometrics samples. The data format is usually tabular, and might vary according to the phto-z estimation method used. \n",
+    "\n",
+    "The size limit for uploading files on the PZ Server is 200MB, therefore it does not support large Photo-z Tables such as the photo-zs of the LSST Objects catalog. The PZ Server can host small Photo-z Tables or, in case of large datasets, a data product can be registered to contain only the Photo-z Tables' metadata. For these cases, the instructions to find and access the data must be provided in the product's description.   "
    ]
   },
   {
