update pz server tutorial notebook

--- a/notebooks/pz_server_tutorial.ipynb
+++ b/notebooks/pz_server_tutorial.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
     "\n",
-    "Last verified run: 2023-Apr-10 <br>"
+    "Last verified run: 2023-Apr-18 <br>"
    ]
   },
   {
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basic plots for quick visualization of catalog properties "
+    "The spec-z catalog object has a very basic plot method for quick visualization of catalog properties "
    ]
   },
   {
@@ -663,6 +663,22 @@
    "outputs": [],
    "source": [
     "gama.plot(ra_name=\"RA\", dec_name=\"DEC\", redshift_name=\"Z\") #TBD: retrieve column names internaly "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The attribute `data`, which is a `DataFrame` preserves the `plot` method from Pandas.   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gama.data.plot(x=\"RA\", y=\"DEC\", kind=\"scatter\")  "
    ]
   },
   {
