get columns names from ucds in plot methods

--- a/pz_server_tutorial.ipynb
+++ b/pz_server_tutorial.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The object `pz_server` just created above can provide access to data and metadata stored in the PZ Server. It also brings useful methods for users to navigate through the available contents. The methods with the preffix \"get_\" return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically (see detaials on the [API documentation page](https://linea-it.github.io/pz-server-lib/html/index.html)). Alternatively, those with the preffix \"display_\" just show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html) (optimized for Jupyter Notebook). For instance:\n",
+    "The object `pz_server` just created above can provide access to data and metadata stored in the PZ Server. It also brings useful methods for users to navigate through the available contents. The methods with the preffix `get_` return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically (see detaials on the [API documentation page](https://linea-it.github.io/pz-server-lib/html/index.html)). Alternatively, those with the preffix `display_` show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), optimized for Jupyter Notebook (note: column names might change in the display version). For instance:\n",
     "\n",
     "Display the list of product types supported with a short description;"
    ]
@@ -266,8 +266,7 @@
    "outputs": [],
    "source": [
     "pz_server.display_products_list(filters={\"release\": \"LSST DP0\", \n",
-    "                                 \"product_type\": \"Training Set\",\n",
-    "                                 \"uploaded_by\": \"Gschwend\"})"
+    "                                 \"product_type\": \"Training Set\"})"
    ]
   },
   {
@@ -309,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To fetch the results of a search and attribute to a variable, just change the preffix \"display_\" by \"get_\", like this:  "
+    "To fetch the results of a search and attribute to a variable, just change the preffix `display_` by `get_`, like this:  "
    ]
   },
   {
@@ -357,8 +356,8 @@
    "outputs": [],
    "source": [
     "# pz_server.display_product_metadata(<id (int or str) or internal_name (str)>) \n",
-    "#pz_server.display_product_metadata(6) \n",
-    "#pz_server.display_product_metadata(\"6\") \n",
+    "# pz_server.display_product_metadata(6) \n",
+    "# pz_server.display_product_metadata(\"6\") \n",
     "pz_server.display_product_metadata(\"6_simple_training_set\") "
    ]
   },
@@ -662,7 +661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gama.plot(ra_name=\"RA\", dec_name=\"DEC\", redshift_name=\"Z\") #TBD: retrieve column names internaly "
+    "gama.plot()"
    ]
   },
   {
@@ -763,7 +762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_goldenspike.plot(mag_name=\"mag_i_lsst\", redshift_name=\"redshift\")"
+    "train_goldenspike.plot(mag_name=\"mag_i_lsst\")"
    ]
   },
   {
