remove duplicate method

--- a/notebooks/pz_server_tutorial.ipynb
+++ b/notebooks/pz_server_tutorial.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
     "\n",
-    "Last verified run: 2023-Apr-18 <br>"
+    "Last verified run: 2023-Apr-24<br>"
    ]
   },
   {
@@ -846,6 +846,17 @@
    "outputs": [],
    "source": [
     "#pz_server.download_product(<id number or internal name>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "### Users feedback \n",
+    "\n",
+    "Is something important missing? [Click here to open an issue in the PZ Server library repository on GitHub](https://github.com/linea-it/pz-server-lib/issues). "
    ]
   },
   {
