--- a/notebooks/pz_server_tutorial.ipynb
+++ b/notebooks/pz_server_tutorial.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pz_server import PzServer \n",
+    "from pzserver import PzServer \n",
     "import matplotlib.pyplot as plt\n",
     "%reload_ext autoreload \n",
     "%autoreload 2"
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"../images/ScreenShotTokenGenerator.png\" width=300pt/>"
+    "<img src=\"images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"images/ScreenShotTokenGenerator.png\" width=300pt/>"
    ]
   },
   {
@@ -730,6 +730,17 @@
    },
    "outputs": [],
    "source": [
+    "! conda list h5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "train_goldenspike.display_metadata()"
    ]
   },
@@ -883,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
