Update intro notebooks
Remove output leftovers and update date and time fields.

--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
     "\n",
-    "Last verified run: 2024-Jan-23<br>"
+    "Last verified run: 2024-May-06<br>"
    ]
   },
   {
@@ -927,9 +927,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pz-lib",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pz-lib"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
