--- a/docs/notebooks/public-specz-compilation.ipynb
+++ b/docs/notebooks/public-specz-compilation.ipynb
@@ -665,9 +665,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "specz",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "specz"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
